--- a/roadmap/src/gtk2/Makefile
+++ b/roadmap/src/gtk2/Makefile
@@ -1,89 +1,55 @@
-# --- Installation options -------------------------------------------------
+# GTK2 makefile
 
-DESTDIR=
-INSTALLDIR=/usr/local
-bindir=$(INSTALLDIR)/bin
+TOP = ..
+include $(TOP)/options.mk
 
+# --- GTK2-specific options ---------------------------------------
 
-# --- Tool specific options ------------------------------------------------
-
-GUICFLAGS=`pkg-config --cflags gtk+-2.0`
-GUILDFLAGS=`pkg-config --libs gtk+-2.0` $(X11LDFLAGS)
-
-
-WARNFLAGS = -W -Wall -Wno-unused-parameter
-
-RDMLIBS= ../libroadmap.a libgtkroadmap.a ../unix/libosroadmap.a ../gpx/libgpx.a ../libroadmap.a
-
-
-ifeq ($(MODE),DEBUG)
-   STDCFLAGS=-g $(WARNFLAGS) -DROADMAP_DEBUG_HEAP
-else
-ifeq ($(MODE),PROFILE)
-   STDCFLAGS=-g $(WARNFLAGS) -pg -fprofile-arcs -g
-   LDFLAGS=-pg $(LDFLAGS)
-else
-   STDCFLAGS=-O2 -ffast-math -fomit-frame-pointer -g $(WARNFLAGS) $(OPTIONS)
-endif
-endif
+LIBS += `pkg-config --libs gtk+-2.0`
+CFLAGS += `pkg-config --cflags gtk+-2.0`
 
 ifeq ($(DESKTOP),GPE)
-	GPECFLAGS=-DROADMAP_USES_GPE
-	GPELDFLAGS=-lgpewidget -ldisplaymigration
-else
-	GPECFLAGS=
-	GPELDFLAGS=
+	CFLAGS +=-DROADMAP_USES_GPE
+	LIBS += -lgpewidget -ldisplaymigration
 endif
 
 
-HOST=`uname -s`
-ifeq ($(HOST),Darwin)
-	ARFLAGS="r"
-else
-	ARFLAGS="rf"
-endif
-
-
-CFLAGS = $(STDCFLAGS) $(GPECFLAGS) $(GUICFLAGS) -I.. -I/usr/local/include
-LIBS = -L/usr/local/lib $(RDMLIBS) $(GPELDFLAGS) $(GUILDFLAGS) -lexpat -lm
-
-# --- RoadMap sources & targets -----------------------------------
+# --- GTK2 sources & targets -----------------------------------
 
 RMLIBSRCS=roadmap_keyboard.c \
           roadmap_messagebox.c \
           roadmap_dialog.c \
           roadmap_fileselection.c \
-          roadmap_signals.c \
-          roadmap_canvas.c
+          roadmap_signals.c
 
-RMLIBOBJS=$(RMLIBSRCS:.c=.o)
+RMLIBOBJS = $(CANVAS_OBJS) $(RMLIBSRCS:.c=.o)
 
-RUNTIME=gtkroadgps gtkroadmap
-
+TARGETS = gtkroadgps gtkroadmap
 
 # --- Conventional targets ----------------------------------------
 
-.PHONY: all runtime clean install uninstall strip
+.PHONY: all strip clean install uninstall
 
-all: runtime
-
-runtime: $(RUNTIME)
-
-clean:
-	rm -f *.o *.a *.da $(RUNTIME)
+all: $(TARGETS)
 
 strip:
-	$(STRIP) -s $(RUNTIME)
+	$(STRIP) $(TARGETS)
+
+clean:
+	rm -f *.o *.a *.da $(TARGETS)
 
 install:
+	$(MAKE) -C $(TOP) install
+	$(STRIP) $(TARGETS)
 	mkdir -p $(DESTDIR)$(bindir)
-	cd $(DESTDIR)$(bindir) && rm -f $(RUNTIME) roadmap roadgps
-	install $(RUNTIME) $(DESTDIR)$(bindir)
+	cd $(DESTDIR)$(bindir) && rm -f $(TARGETS) roadmap roadgps
+	install $(TARGETS) $(DESTDIR)$(bindir)
 	ln -s gtkroadmap $(DESTDIR)$(bindir)/roadmap
 	ln -s gtkroadgps $(DESTDIR)$(bindir)/roadgps
 
 uninstall:
-	cd $(DESTDIR)$(bindir) && rm -f $(RUNTIME) roadmap roadgps
+	cd $(DESTDIR)$(bindir) && rm -f $(TARGETS) roadmap roadgps
+	$(MAKE) -C $(TOP) uninstall
 
 # --- The real targets --------------------------------------------
 
@@ -91,9 +57,13 @@ libgtkroadmap.a: $(RMLIBOBJS)
 	$(AR) $(ARFLAGS) libgtkroadmap.a $(RMLIBOBJS)
 	$(RANLIB) libgtkroadmap.a
 
-gtkroadmap: roadmap_main.o ../libguiroadmap.a $(RDMLIBS)
-	$(CC) $(LDFLAGS) roadmap_main.o -o gtkroadmap ../libguiroadmap.a $(LIBS)
+gtkroadmap: roadmap_main.o libgtkroadmap.a \
+		$(TOP)/libguiroadmap.a $(filter %.a, $(LIBS))
+	$(CXX) $(LDFLAGS) -o gtkroadmap roadmap_main.o \
+		$(TOP)/libguiroadmap.a libgtkroadmap.a $(LIBS)
 
-gtkroadgps: roadmap_main.o ../libguiroadgps.a $(RDMLIBS)
-	$(CC) $(LDFLAGS) roadmap_main.o -o gtkroadgps ../libguiroadgps.a $(LIBS)
+gtkroadgps: roadmap_main.o libgtkroadmap.a \
+		$(TOP)/libguiroadgps.a  $(filter %.a, $(LIBS))
+	$(CXX) $(LDFLAGS) -o gtkroadgps roadmap_main.o \
+		$(TOP)/libguiroadgps.a libgtkroadmap.a $(LIBS)
 
