--- a/roadmap/src/qt/Makefile
+++ b/roadmap/src/qt/Makefile
@@ -1,61 +1,35 @@
+
+# QT makefile
+
+TOP = ..
+include $(TOP)/options.mk
+
 # --- Installation options -------------------------------------------------
 
-DESTDIR=
-INSTALLDIR=/usr/local
-bindir=$(INSTALLDIR)/bin
 desktopdir=$(INSTALLDIR)/apps/Applications
-pkgdatadir=$(INSTALLDIR)/share/roadmap
+MOC=$(QTDIR)/bin/moc
 
+# --- QT-specific options ------------------------------------------------
 
-# --- Tool specific options ------------------------------------------------
-
-WARNFLAGS=-W -Wall -Wno-unused-parameter
-
-GUICFLAGS=-I/usr/include/qt3 -I/usr/local/include/qt3
-GUILDFLAGS=-lqt
-MOC=/usr/bin/moc
+CFLAGS += -I$(QTDIR)/include -I/usr/include/qt3 -I/usr/local/include/qt3
+CFLAGS += -fno-rtti -fno-exceptions
+LIBS += -L$(QTDIR)/lib -lqt-mt
 
 
 ifeq ($(DESKTOP),QPE)
-   GUICFLAGS=-I$(QTDIR)/include -DQWS
-   GUILDFLAGS=-L$(QTDIR)/lib -lqte -lqpe
-   MOC=$(QTDIR)/bin/moc
-   LDFLAGS=-L$(QTDIR)/lib
+   CFLAGS += -I$(QTDIR)/include -DQWS
+   LIBS += -lqte -lqpe
    INSTALLDIR=$(QTDIR)
 endif
 
-ifeq ($(MODE),DEBUG)
-   STDCFLAGS=-g $(WARNFLAGS) -DROADMAP_DEBUG_HEAP
-else
-ifeq ($(MODE),PROFILE)
-   STDCFLAGS=-g $(WARNFLAGS) -pg -fprofile-arcs -g
-   LDFLAGS=-pg $(LDFLAGS)
-else
-   STDCFLAGS=-O2 -ffast-math -fomit-frame-pointer -g $(WARNFLAGS) $(OPTIONS)
-endif
-endif
-
-CFLAGS=$(STDCFLAGS) $(GUICFLAGS) -I..
-CPPFLAGS=-I.. $(GUICFLAGS) $(STDCFLAGS) -fno-rtti -fno-exceptions -pipe
-
-HOST=`uname -s`
-ifeq ($(HOST),Darwin)
-	ARFLAGS="r"
-else
-	ARFLAGS="rf"
-endif
-
-RDMLIBS= ../libroadmap.a libqtroadmap.a ../unix/libosroadmap.a ../gpx/libgpx.a ../libroadmap.a
-LIBS=$(RDMLIBS) $(GUILDFLAGS) -lexpat -lm
 
 
-# --- RoadMap sources & targets --------------------------------------------
+# --- QT sources & targets --------------------------------------------
 
-RMLIBSRCS= qt_main.cc \
+RMLIBSRCS = qt_main.cc \
            moc_qt_main.cc \
            qt_canvas.cc \
            moc_qt_canvas.cc \
-           roadmap_canvas.cc \
            qt_dialog.cc \
            moc_qt_dialog.cc \
            roadmap_dialog.cc \
@@ -64,30 +38,35 @@ RMLIBSRCS= qt_main.cc \
            roadmap_fileselection.cc \
            roadmap_messagebox.c
 
-RMLIBOBJS1=$(RMLIBSRCS:.c=.o)
-RMLIBOBJS=$(RMLIBOBJS1:.cc=.o)
+# temporary
+roadmap_canvas_agg.o:
+	@echo
+	@echo "*** Sorry!  We still need a roadmap_canvas_agg.cc for QT."
+	@echo
+	false
 
-RUNTIME=qtroadmap qtroadgps
+RMLIBOBJS1 = $(RMLIBSRCS:.cc=.o)
+RMLIBOBJS = $(CANVAS_OBJS) $(RMLIBOBJS1:.c=.o)
+
+TARGETS = qtroadgps qtroadmap
 
 
 # --- Conventional targets ----------------------------------------
 
-.PHONY: all runtime clean strip install install-ipkg uninstall
+.PHONY: all clean strip install install-ipkg uninstall
 
-all: runtime
-
-runtime: $(RUNTIME)
+all: $(TARGETS)
 
 clean:
-	rm -f *.o *.a *.da $(RUNTIME) moc_qt_*.cc
+	rm -f *.o *.a *.da $(TARGETS) moc_qt_*.cc
 
 strip:
-	$(STRIP) -s $(RUNTIME)
+	$(STRIP) $(TARGETS)
 
 install:
 	mkdir -p $(DESTDIR)$(bindir)
-	cd $(DESTDIR)$(bindir) && rm -f $(RUNTIME) roadmap roadgps
-	install $(RUNTIME) $(DESTDIR)$(bindir)/
+	cd $(DESTDIR)$(bindir) && rm -f $(TARGETS) roadmap roadgps
+	install $(TARGETS) $(DESTDIR)$(bindir)/
 	ln -s qtroadmap $(DESTDIR)$(bindir)/roadmap
 	ln -s qtroadgps $(DESTDIR)$(bindir)/roadgps
 
@@ -103,7 +82,7 @@ install-ipkg: install
 #	install ipkg/preferences $(DESTDIR)$(pkgdatadir)
 
 uninstall:
-	cd $(bindir) && rm -f $(RUNTIME) roadmap roadgps
+	cd $(bindir) && rm -f $(TARGETS) roadmap roadgps
 
 
 # --- The real targets --------------------------------------------
@@ -112,11 +91,15 @@ libqtroadmap.a: $(RMLIBOBJS)
 	$(AR) $(ARFLAGS) libqtroadmap.a $(RMLIBOBJS)
 	$(RANLIB) libqtroadmap.a
 
-qtroadmap: roadmap_main.o ../libguiroadmap.a $(RDMLIBS)
-	$(CXX)  -o qtroadmap roadmap_main.o ../libguiroadmap.a $(LIBS)
+qtroadmap: roadmap_main.o libqtroadmap.a \
+		$(TOP)/libguiroadmap.a $(filter %.a, $(LIBS))
+	$(CC) $(LDFLAGS) -o qtroadmap roadmap_main.o \
+		$(TOP)/libguiroadmap.a libqtroadmap.a $(LIBS)
 
-qtroadgps: roadmap_main.o ../libguiroadgps.a $(RDMLIBS)
-	$(CC) roadmap_main.o -o qtroadgps ../libguiroadgps.a $(LIBS)
+qtroadgps: roadmap_main.o libqtroadmap.a \
+		$(TOP)/libguiroadgps.a  $(filter %.a, $(LIBS))
+	$(CC) $(LDFLAGS) -o qtroadgps roadmap_main.o \
+		$(TOP)/libguiroadgps.a libqtroadmap.a $(LIBS)
 
 moc_qt_main.cc: qt_main.h
 	$(MOC) qt_main.h -o moc_qt_main.cc
