Play WAV files.

--- a/roadmap_editor/src/unix/Makefile
+++ b/roadmap_editor/src/unix/Makefile
@@ -18,6 +18,7 @@ OSLIBSRCS=roadmap_file.c \
           roadmap_net.c \
           ../md5.c \
           roadmap_serial.c \
+          roadmap_sound.c \
           roadmap_spawn.c \
           roadmap_time.c
 
