fix the "build:" target.  buildmap and friends shouldn't need the gpx library, but it's in RDMLIBS, and therefore in everyone's dependencies.  the unix lib, however, really is needed.

--- a/roadmap/src/Makefile
+++ b/roadmap/src/Makefile
@@ -211,7 +211,7 @@ runtime: unix gpx $(RUNTIME) $(DRIVERS)
 		$(MAKE) -C $$module all || exit 1; \
 	done
 
-build: $(BUILD)
+build: unix gpx $(BUILD)
 
 strip:
 	-$(STRIP) $(BUILD) $(DRIVERS)
