--- a/trunk/roadmap_editor/src/Makefile
+++ b/trunk/roadmap_editor/src/Makefile
@@ -175,6 +175,7 @@ RMPLUGINSRCS=roadmap_copy.c \
              editor/editor_plugin.c \
              editor/editor_screen.c \
              editor/static/editor_dialog.c \
+             editor/static/update_range.c \
              editor/db/editor_street.c \
              editor/db/editor_point.c \
              editor/db/editor_shape.c \
