--- a/trunk/roadmap_editor/src/win32/roadmap.rc
+++ b/trunk/roadmap_editor/src/win32/roadmap.rc
@@ -67,7 +67,7 @@ IDM_MENU SHMENUBAR MOVEABLE PURE
 BEGIN
     IDM_MENU, 1,
     I_IMAGENONE, IDM_MAIN_COMMAND1, TBSTATE_ENABLED, 
-    TBSTYLE_DROPDOWN | TBSTYLE_AUTOSIZE, IDS_HELP, 0, 0
+    TBSTYLE_DROPDOWN | TBSTYLE_AUTOSIZE, IDS_HELP, 0, 0,
 END
 
 
@@ -90,8 +90,8 @@ END
 // Dialog
 //
 
-IDD_GENERIC DIALOGEX 0, 0, 172, 187
-STYLE WS_POPUP | WS_BORDER
+IDD_GENERIC DIALOGEX 0, 0, 174, 187
+STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION
 EXSTYLE 0x80000000L
 FONT 8, "System"
 BEGIN
@@ -121,7 +121,7 @@ BEGIN
     IDD_GENERIC, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 165
+        RIGHTMARGIN, 167
         TOPMARGIN, 7
         BOTTOMMARGIN, 180
     END
