Edit / View markers dialog.

--- a/roadmap_editor/src/Makefile
+++ b/roadmap_editor/src/Makefile
@@ -176,12 +176,14 @@ RMPLUGINSRCS=roadmap_copy.c \
              editor/editor_screen.c \
              editor/static/editor_dialog.c \
              editor/static/update_range.c \
+             editor/static/edit_marker.c \
              editor/db/editor_street.c \
              editor/db/editor_point.c \
              editor/db/editor_shape.c \
              editor/db/editor_line.c \
              editor/db/editor_square.c \
              editor/db/editor_route.c \
+             editor/db/editor_marker.c \
              editor/db/editor_dictionary.c \
 				 buildmap_dbwrite.c \
 				 buildmap_metadata.c \
