--- a/roadmap_editor/src/win32/roadmap.rc
+++ b/roadmap_editor/src/win32/roadmap.rc
@@ -67,7 +67,7 @@ IDM_MENU SHMENUBAR MOVEABLE PURE
 BEGIN
     IDM_MENU, 1,
     I_IMAGENONE, IDM_MAIN_COMMAND1, TBSTATE_ENABLED, 
-    TBSTYLE_DROPDOWN | TBSTYLE_AUTOSIZE, IDS_HELP, 0, 0,
+    TBSTYLE_DROPDOWN | TBSTYLE_AUTOSIZE, IDS_HELP, 0, 0
 END
 
 
