the desktop icon is usually a png file these days.

--- a/roadmap/src/roadmap.desktop
+++ b/roadmap/src/roadmap.desktop
@@ -2,7 +2,7 @@
 Comment=RoadMap
 Comment=Car Navigation System
 Exec=roadmap
-Icon=roadmap.xpm
+Icon=roadmap.png
 Type=Application
 Name=RoadMap
 GenericName=Map Viewer
